@@ -1,3 +1,7 @@
+2000-06-09  Martin Baulig  <martin@home-of-linux.org>
+
+	* gnome-common.m4: We need this here as well.
+
 2000-05-29  Martin Baulig  <baulig@suse.de>
 
 	* Makefile.am: New file. Install this stuff into
